--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
-﻿/*Desktop first*/
-
+﻿
+/*@import url('https://fonts.googleapis.com/css?family=Montserrat:100,900i');*/
+/*Desktop first*/
 body {
     box-sizing: content-box;
     font-family: 'raleway', sans-serif;
