corrigé taille hebergement,populaire

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,6 +77,7 @@ h5 {
     line-height: 19px;
     text-align: start;
     margin-top: 10px;
+    margin-bottom:39px;
 }
 
 
@@ -316,7 +317,7 @@ i.fa-solid.fa-magnifying-glass {
     flex-direction: column;
     align-items: center;
     border-radius: 15px;
-    width: 35%;
+    width: 32%;
     height: 625px;
     background: #F2F2F2;
 }
