--- a/CSS/style.css
+++ b/CSS/style.css
@@ -959,7 +959,9 @@ i.fa-solid.fa-location-dot.fa-lg {
             align-items: start;
             gap: 30px;
             margin: auto;
-            width:95%;
+            padding-bottom:61px;
+            width:100%;
+            height:501px;
         }
 
         .propos,
