--- a/CSS/style.css
+++ b/CSS/style.css
@@ -775,8 +775,9 @@ i.fa-solid.fa-location-dot.fa-lg {
         }
 
 
-        #header {
+        header {
             padding-left: 0px;
+            width:100%;
         }
 
         /* Header */
@@ -805,6 +806,7 @@ i.fa-solid.fa-location-dot.fa-lg {
             display: block;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 20px
         }
 
 
@@ -819,11 +821,16 @@ i.fa-solid.fa-location-dot.fa-lg {
         h1 {
             margin-top: 22px;
             margin-left: 5px;
+            width:100%;
         }
 
         h5 {
             display: flex;
             justify-content: left;
+            width: 100%;
+            margin: auto;
+            padding-left: 7px;
+            margin-bottom: 35px;
         }
 
         #fname {
@@ -847,6 +854,7 @@ i.fa-solid.fa-location-dot.fa-lg {
 
         #info {
             margin-bottom: 20px;
+            width:100%;
         }
 
         .main {
@@ -993,9 +1001,10 @@ i.fa-solid.fa-location-dot.fa-lg {
             align-items: start;
             gap: 30px;
             margin: auto;
-            padding-bottom:61px;
-            width:100%;
-            height:501px;
+            padding-bottom: 61px;
+            width: 100%;
+            height: 501px;
+            margin-top: 65px;
         }
 
         .propos,
