--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,10 @@
     padding:0;
 }
 
+html {
+    width:87%;
+    margin:auto;
+}
 body {
     box-sizing: content-box;
     font-family: 'raleway', sans-serif;
@@ -16,12 +20,12 @@ body {
     margin: auto;
 }
 
-#header {
+/*header {
     display: flex;
     flex-direction: column;
     width: 100%;
     padding-left: 50px;
-}
+}*/
 
 /* Header */
 
@@ -416,7 +420,7 @@ i.fa-solid.fa-magnifying-glass {
 .activite {
     display: flex;
     flex-direction: column;
-    width: 99%;
+    width: 100%;
     margin-top: 50px;
 }
 
