--- a/CSS/style.css
+++ b/CSS/style.css
@@ -942,6 +942,7 @@ i.fa-solid.fa-location-dot.fa-lg {
             height: auto;
             margin: 0px;
             border-radius:0px;
+            padding-right:20%;
         }
 
         .populaire-jaune {
@@ -997,6 +998,8 @@ i.fa-solid.fa-location-dot.fa-lg {
             padding-bottom: 61px;
             height: 501px;
             margin-top: 65px;
+            margin-left: -1%;
+            padding-right: 17%;
         }
 
         .propos,
