pssé padding-left  en %

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -950,7 +950,7 @@ i.fa-solid.fa-location-dot.fa-lg {
             align-items: center;
             gap: 10px;
             width: 100%;
-            padding-left: 53px;
+            padding-left: 22%;
         }
 
         .card-populaire-desktop,
