box-shadow sur les cartes

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -244,6 +244,7 @@ i.fa-solid.fa-magnifying-glass {
     margin-bottom: 26px;
     border-radius: 15px 15px 15px 15px;
     background-color: white;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
 .Img-hebergement {
@@ -348,6 +349,7 @@ i.fa-solid.fa-magnifying-glass {
     border-radius: 15px 15px 15px 15px;
     margin: 15px 1% 15px 4.5%;
     background-color: white;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
 .Img-populaire {
@@ -425,7 +427,8 @@ i.fa-solid.fa-magnifying-glass {
     height: 302px;
     margin-left: 16px;
     margin-bottom: 12px;
-    box-shadow: 5px 10px #f0f2f6;
+    /* box-shadow: 5px 10px #f0f2f6; */
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
 .card-activite {
